fix(text): small text vertical align

--- a/packages/mokui-text/mokui-text.css
+++ b/packages/mokui-text/mokui-text.css
@@ -36,6 +36,7 @@ p + p {
 }
 
 .text_size_s {
+        line-height: calc(var(--msp-1) * 0.95);
         font-size: var(--msc-m1);
 }
 
